// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test K8sBlueGreenDeployStep should render Variable view 1`] = `<div />`;

exports[`Test K8sBlueGreenDeployStep should render edit view  1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
    >
      <div
        class="formGroup md"
      >
        <div
          class="InputWithIdentifier--txtNameContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  />
                </div>
              </span>
            </span>
            <span
              class="bp3-icon bp3-icon-edit StyledProps--main"
              icon="edit"
              style="vertical-align: middle;"
            >
              <svg
                data-icon="edit"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  edit
                </desc>
                <path
                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Name
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value="Test A"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup sm"
      >
        <div
          class="bp3-form-group duration"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            Timeout
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              style="flex-grow: 1;"
            >
              <div
                class="TextInput--main MultiTypeInput--input"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    name="timeout"
                    placeholder="<+input>"
                    type="text"
                    value="<+input>"
                  />
                </div>
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="runtime-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 10 7.97"
                        width="12"
                      >
                        <path
                          d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                          fill="current-color"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main"
          id="configureOptions"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cog StyledProps--main"
            icon="cog"
          >
            <svg
              data-icon="cog"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cog
              </desc>
              <path
                d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sBlueGreenDeployStep should render edit view as new step 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
    >
      <div
        class="formGroup md"
      >
        <div
          class="InputWithIdentifier--txtNameContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  />
                </div>
              </span>
            </span>
            <span
              class="bp3-icon bp3-icon-edit StyledProps--main"
              icon="edit"
              style="vertical-align: middle;"
            >
              <svg
                data-icon="edit"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  edit
                </desc>
                <path
                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Name
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup sm"
      >
        <div
          class="bp3-form-group duration"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            Timeout
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="flex-grow: 1;"
            >
              <div
                class="bp3-input-group bp3-fill"
              >
                <input
                  class="bp3-input"
                  name="timeout"
                  placeholder="Enter w/d/h/m/s/ms"
                  type="text"
                  value="10m"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sBlueGreenDeployStep should render edit view for inputset 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
        for=".timeout"
      >
        Timeout
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group bp3-fill"
        >
          <input
            class="bp3-input"
            name=".timeout"
            placeholder="Enter w/d/h/m/s/ms"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;
